feat: added photo and used in html

--- a/feature1/index.html
+++ b/feature1/index.html
@@ -6,5 +6,10 @@
         <script src="./index.js" />
         <title>Document</title>
     </head>
-    <body></body>
+    <body>
+        <main>
+            <h1>Testing Wow!</h1>
+            <img src="./test.svg" alt="Very cool photo" />
+        </main>
+    </body>
 </html>
